--- a/IntersactionTwoObject/Resource.rc
+++ b/IntersactionTwoObject/Resource.rc
@@ -51,13 +51,12 @@ END
 //
 
 IDD_DIALOG1 DIALOGEX 0, 0, 299, 182
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "ŒÚÏÂÌ‡",IDCANCEL,242,161,50,14
     EDITTEXT        IDC_TORUS_X,167,31,71,14,ES_AUTOHSCROLL
-    LTEXT           "—‘≈–¿",IDC_STATIC,6,6,144,8,SS_CENTERIMAGE
     LTEXT           "“Œ–",IDC_STATIC,150,6,142,8
     EDITTEXT        IDC_TORUS_Y,167,45,71,13,ES_AUTOHSCROLL
     EDITTEXT        IDC_TORUS_Z,167,58,71,14,ES_AUTOHSCROLL
@@ -70,6 +69,8 @@ BEGIN
     EDITTEXT        IDC_SPHERE_X,19,31,71,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_SPHERE_Y,19,45,71,13,ES_AUTOHSCROLL
     EDITTEXT        IDC_SPHERE_Z,19,58,71,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Œ·ÌÓ‚ËÚ¸",IDC_BUTTON_UPDATE_YU,167,161,50,14
+    LTEXT           "—‘≈–¿",IDC_STATIC,6,6,144,8,SS_CENTERIMAGE
 END
 
 
